added black to the dev requirements

--- a/Pipfile
+++ b/Pipfile
@@ -4,14 +4,18 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+black = "*"
 pytest = "*"
-mypy = "*"
 pytest-cov = "*"
 sphinx = "*"
 recommonmark = "*"
 pylint = "*"
+mypy = "*"
 
 [packages]
 
 [requires]
 python_version = "3.7"
+
+[pipenv]
+allow_prereleases = true
